--- a/src/styles/components/Search.module.scss
+++ b/src/styles/components/Search.module.scss
@@ -17,7 +17,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   position: fixed;
   top: 0;
   left: 0;
@@ -33,20 +33,23 @@
   min-height: 10rem;
   border-radius: 0.5rem;
   margin: 0 auto;
+  margin-top: 15rem;
   max-width: 55rem;
   padding: 2rem;
-  background: var(--light-shadow);
+  background: var(--ruby);
 
   & p {
     font-size: 1.8rem;
     margin: 0.5rem 0;
+    color: var(--gray-light);
+    font-weight: bold;
   }
 
   & .error {
-    background: var(--ruby);
-    color: var(--gray-light);
+    background: var(--gray-light);
+    color: var(--shadow);
     border-radius: 0.5rem;
-    padding: 0 0.5rem;
+    padding: 0.5rem;
     margin: 1rem 0 0 0;
   }
 }
